--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <nav class="navegador">
 
+            <img alt="Logo do Stakeholders" class="logo" src="assets/images/Área-de-proteção-horizontal.png">
+
             <ul class="lista">
                 <li class="item-lista"><a href="" class="link">Apresentação</a></li>
                 <li class="item-lista"><a href="" class="link">Marca</a></li>
