--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="site">
         <!-- NAVEGADOR -->
         <nav class="navegador">
-
             <img alt="Logo do Stakeholders" class="logo" src="assets/images/Área-de-proteção-horizontal.png">
 
             <ul class="lista">
@@ -26,7 +25,8 @@
 
         </nav>
 
-        <div class="barra"></div>
+        <!-- <div class="barra"></div> -->
+
         <!-- CORPO SITE -->
         <div class="corpo-site">
             <!-- PARTE 1 -->
