--- a/index.html
+++ b/index.html
@@ -286,8 +286,11 @@
             <!-- PARTE 4 -->
             
             <div class="parte-4">
-                <h1>Aplicações</h1>
-
+                    <div class="aplicacoes">
+                            <h1>
+                                Aplicações
+                            </h1>
+                        </div>
                 <div class="parte-4-grupo1">
                     <h1>Marca em fundos sólidos</h1>
                     <img src="./assets/images/marca-fundo-solidos.png" alt="" class="marca-em-fundos-solidos">
@@ -298,14 +301,7 @@
                 </div>
                 <div class="parte-4-grupo1">
                     <h1>Restriçoes da marca</h1>
-                    <img src="./assets/images/restricoes.png" alt="" class="marca-em-fundos-solidos">
                 </div>
-            </div>
-
-
-            <!-- PARTE 5 -->
-
-            <div class="parte-5">
                     <div class="parte5-grupo1">
                         <div class="titulo-sound">
                             <h1>
@@ -330,7 +326,7 @@
                         </div>    
                             <img src="./assets/images/Verticalbranco.png" alt="">
                     </div>
-            </div>
+                </div>
 
         </div>
 
