--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <h1>
                             Marca
                         </h1>
-                    </div>
+                 </div>
                 <div class="parte-2-grupo1">
                     <h2>Conceito de Criação</h2>
                     <p>"Facilitar a adaptação através da colaboração."</p>
@@ -232,13 +232,11 @@
             <!-- PARTE 3 -->
             
             <div class="parte-3">
-            <div class="parte3-grupo1">
                 <div class="elementos">
                     <h1>
                         Elementos de Apoio
                     </h1>
                 </div>
-            </div>
             <div class="parte3-grupo2">
                     <div class="tipografia">
                         <h1>
@@ -286,11 +284,11 @@
             <!-- PARTE 4 -->
             
             <div class="parte-4">
-                    <div class="aplicacoes">
-                            <h1>
-                                Aplicações
-                            </h1>
-                        </div>
+                <div class="titulo-aplicacoes">
+                        <h1>
+                            Aplicações
+                        </h1>
+                </div>
                 <div class="parte-4-grupo1">
                     <h1>Marca em fundos sólidos</h1>
                     <img src="./assets/images/marca-fundo-solidos.png" alt="" class="marca-em-fundos-solidos">
@@ -312,16 +310,18 @@
                     <div class="texto-sound">
                         <div class="textinho">
                                 <p>
-                                        Somos uma marca <b>empática</b>, que procura ser sempre objetiva e direta. Tendo isso em mente, temos a missão de sermos diferentes das vozes mecânicas que algumas tecnologias ainda utilizam, queremos ficar mais próximos de você.
+                                        Somos uma marca <b>empática</b>, objetiva e direta.<br>Temos a missão de sermos diferentes das vozes<br>mecânicas que algumas tecnologias ainda<br>utilizam, queremos ficar mais próximos de você.
                                         <br>
                                          <br>
-                                        Utilizamos um tom de voz mais <b>humanizado</b> e <b>jovial</b>, falando sempre a linguagem do dia a dia, procurando escrever e falar de um jeito fácil, bem parecido com algumas assistentes virtuais que já existem no mercado.
+                                        Utilizamos um tom de voz mais <b>humanizado</b> e<br> <b>jovial</b>, falando sempre a linguagem do dia a dia,<br>procurando escrever e falar de um jeito fácil,<br>bem parecido com algumas assistentes virtuais<br>que já existem no mercado.
                                         <br> 
                                         <br>
-                                        <b>Nós somos sempre políticos e simpáticos</b>, além de nos preocuparmos em tornar a internet um local acessível à todos.
+                                        <b>Somos sempre solíticos e simpáticos</b>, além de<br>nos preocuparmos em tornar a internet um local<br>acessível à todos.
                                         <br> 
                                         <br>
-                                        Usamos <b>“nós”</b> e <b>“a gente”</b> no nosso discurso para falar ao mesmo tempo do Stakeholders, da nossa equipe e das pessoas que nos cercam, <b>incluindo sempre você no nosso diálogo</b>. Queremos fazer parte de suas vidas.
+                                        Usamos <b>“nós”</b> e <b>“a gente”</b> no nosso discurso para<br>falar ao mesmo tempo da gente e das pessoas<br>que nos cercam, <b>incluindo sempre você<br>no nosso diálogo</b>. 
+                                        <br><br>
+                                        <b>Queremos fazer parte de suas vidas.</b> 
                                 </p>
                         </div>    
                             <img src="./assets/images/Verticalbranco.png" alt="">
