--- a/index.html
+++ b/index.html
@@ -324,8 +324,33 @@
                         </div>    
                             <img src="./assets/images/Verticalbranco.png" alt="">
                     </div>
+                        <div class="titulo-down">
+                            <h1>Downloads</h1>
+                        </div>
+                        <div class="coluna-1-parte1">
+                            <h2>
+                                Pack versão horizontal
+                            </h2>
+                            <img class="logo-horizontal" src="./assets/images/Área-de-proteção-horizontal.png" alt="">
+                            <div class="botoes">
+                                <button class="botao-scripts">
+                                    .SVG
+                                </button>
+                                <button class="botao-pedidos">
+                                    .EPS
+                                </button>
+                                <button class="botao-dev" onclick="window.location.href='./explorar-desenvolvedores.html'">
+                                    .png
+                                </button>
+                            </div>
+                            <div class="grafismos">
+                                <h2>
+                                        Grafismo Ondas 1
+                                </h2>
+                            </div>
+                            <img src="./assets/images/grafismo-site.png" alt="" class="ondas-1">
+                        </div>
                 </div>
-
         </div>
 
     </div>
